# daylog-mail

./: Cargo.toml  README.md  config.example.yaml  daylog.service
src/: config.rs  db.rs  ingest.rs  mail.rs  maildir.rs  main.rs  mbox.rs  message_id.rs  named_pipe.rs  reload.rs  run.rs  send.rs  time.rs  user.rs
