[package]
name = "daylog-email"
version = "0.2.3"
authors = ["Bill Fraser <wfraser@codewise.org>"]
description = "Daylog is a daily journal keeper, operating over email."
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.13"
chrono = "0.4.9"
chrono-tz = "0.6.1"
clap = { version = "3", features = ["cargo", "derive"] }
hostname = "0.3"
log = "0.4.8"
maildir = "0.6.1"
mailparse = "0.13"
nix = "0.24"
regex = "1.3.1"
ring = "0.16.9"
rusqlite = "0.27"
serde = { version = "1.0", features = ["derive"] }
serde_rusqlite = "0.30"
serde_yaml = "0.8.11"
signal-hook = "0.3.14"
stderrlog = "0.5.1"
