[package]
name = "daylog-email"
version = "0.2.6"
authors = ["Bill Fraser <wfraser@codewise.org>"]
description = "Daylog is a daily journal keeper, operating over email."
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
base64 = "0.21"
chrono = "0.4.9"
chrono-tz = "0.10.3"
clap = { version = "4", features = ["cargo", "derive"] }
hostname = "0.4.1"
log = "0.4.8"
maildir = "0.6.1"
mailparse = "0.14"
nix = { version = "0.30.1", features = ["fs", "poll", "socket"] }
regex = "1.3.1"
ring = "0.17.0"
rusqlite = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_rusqlite = "0.34"
serde_yaml = "0.9.13"
signal-hook = "0.3.14"
stderrlog = "0.5.1"
